<resources>
    <string name="app_name">Contact Manager</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="yam_porriage">YAM PORRIAGE</string>
    <string name="fried_riice">FRIED RIICE</string>
    <string name="swallow">SWALLOW</string>
    <string name="cakes">CAKES</string>
    <string name="drinks">DRINKS</string>
    <string name="moi_moi">MOI MOI</string>
    <string name="soup">SOUP</string>
    <string name="rice">RICE</string>
    <string name="event_planner">Event Planner</string>
    <string name="event_center">Event Center</string>
    <string name="wedding_gown">Wedding gown</string>
    <string name="rent_your_car">Rent your car</string>
    <string name="Entertainment">Entertainment</string>
    <string name="snacks">SNACKS</string>
    <string name="cake">CAKE</string>
    <string name="entertainment">Entertainment</string>

    <string-array name="Select_quantity">
        <item>20pcs</item>
        <item>30pcs</item>
        <item>50pcs</item>
        <item>70pcs</item>
        <item>100pcs</item>
        <item>130pcs</item>
        <item>150pcs</item>
        <item>200pcs</item>
        <item>230pcs</item>
        <item>250pcs</item>
        <item>270pcs</item>
        <item>280pcs</item>
        <item>300pcs</item>
        <item>350pcs</item>

    </string-array>

    <string-array name="drink_quantity">
        <item>1 carton</item>
        <item>2 carton</item>
        <item>3 carton</item>
        <item>4 carton</item>
        <item>5 carton</item>
        <item>6 carton</item>
        <item>7 carton</item>
        <item>8 carton</item>
        <item>9 carton</item>
        <item>10 carton</item>
        <item>12 carton</item>
        <item>13 carton</item>

    </string-array>

    <string-array name="Number_of_Quest">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>350</item>
        <item>400</item>
        <item>450</item>
        <item>500</item>
        <item>550</item>
        <item>600</item>
        <item>650</item>
        <item>700</item>
        <item>750</item>

    </string-array>

    <string-array name="Hall">
        <item>50 Sitter Auditorium</item>
        <item>50 Conference Room</item>
        <item>100 Conference Room</item>
        <item>100 Sitter Hall</item>
        <item>150 Sitter Hall</item>
        <item>200 Sitter Hall</item>


    </string-array>

    <string-array name="Car_Model">
        <item>1990</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item> 2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>


    </string-array>

</resources>
