<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foodtruck"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.crash.etranzact.contactmanager.HomeActivity"
    tools:showIn="@layout/app_bar_home">


    <FrameLayout
        android:id="@+id/screen_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="Book your caterer"
                    android:textColor="#FFFfff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/drink"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/circle"
                    android:onClick="snacksButton"
                    android:text="Snacks"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/circle"
                    android:onClick="drinkButton"
                    android:text="Drinks"
                    android:textColor="@color/colorPrimary" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/circle"
                    android:onClick="soupOpen"
                    android:text="Swallow"
                    android:textColor="@color/colorPrimary" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/circle"
                    android:onClick="riceOpen"
                    android:text="@string/rice"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/circle"
                    android:onClick="cakeButton"
                    android:text="@string/cake"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:background="@android:color/darker_gray" />-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="Place your event"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/drink"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/circle"
                    android:onClick="eventButton"
                    android:text="@string/event_center"
                    android:textColor="@color/colorPrimary" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/circle"
                    android:onClick="weddingButton"
                    android:text="@string/wedding_gown"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:background="@drawable/circle"
                    android:onClick="rentCarButton"
                    android:text="@string/rent_your_car"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/planer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/circle"
                    android:onClick="plannerButton"
                    android:text="@string/event_planner"
                    android:textColor="@color/colorPrimary" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:background="@drawable/circle"
                    android:onClick="entertainerButton"
                    android:text="@string/entertainment"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="Please What can we offer you today!"
            android:textColor="#FFFfff" />


    </FrameLayout>

</LinearLayout>
